--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,10 @@
 server:
   port: ${PORT:8888}
+  context-path: ${CONTEXT_PATH:/}
 
 info:
   component: config-server
+  version: 2.0
 
 spring:
   cloud:
@@ -10,6 +12,8 @@ spring:
       server:
         git:
           uri: ${GIT_REPO:https://github.com/thbono/apps-config.git}
+          username: ${GIT_USER:}
+          password: ${GIT_PASSWORD:}
 
 management:
   security:
